--- a/foundations/block-and-inline/01-margin-and-padding-1/style.css
+++ b/foundations/block-and-inline/01-margin-and-padding-1/style.css
@@ -5,9 +5,9 @@ body {
 
 .one {
   background: pink;
-  border: 32px solid blue;
+  border: 3px solid blue;
   /* CHANGE ME */
-  padding: 0px;
+  padding: 32px;
   margin: 12px;
 }
 
@@ -20,9 +20,9 @@ body {
 
 .three {
   background: peachpuff;
-  border: 32px solid brown;
+  border: 3px solid brown;
   width: 200px;
   /* CHANGE ME */
-  padding: 0px;
-  margin-left: 48px;
+  padding: 32px;
+  margin-left: auto;
 }
